@@ -1,5 +1,12 @@
 2006-02-23  Matthew Gregan  <kinetik@orcon.net.nz>
 
+	* tests/t_log_selectors.at: UnXFAIL.
+
+	* commands.cc (complete): Refactor selector completion to enable
+	return of single or sets of completed revisions.
+	(CMD(log)): Do something sensible with selectors that return
+	multiple revisions.
+
 	* tests/t_log_selectors.at: XFAILed test for bug #15877.
 
 	* testsuite.at: Add it.
